[package]
name = "cmdgptvm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.40", features = ["cargo"]}
reqwest = { version = "0.12.20", features = ["blocking","json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }